...
}

class _TestDartboardScreenState extends State<TestDartboardScreen> {
  final MockScoliaApiService _mockApi = MockScoliaApiService();
  final ScrollController _logScrollController = ScrollController();
  final GlobalKey<InteractiveDartboardState> _dartboardKey = GlobalKey();
  String _playerName = 'Player 1';
  bool _autoScroll = true;
  int _dartThrowCount = 0;

  @override
  void initState() {
    super.initState();
...
